# mcp-ssh-orchestrator-test

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AUDIT_LOG_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  GITHUB_ACTIONS_TROUBLESHOOTING.md  LICENSE  PR_DESCRIPTION.md  README.md  SCORECARD_IMPROVEMENTS.md  SECURITY.md  WIKI_MIGRATION_SUMMARY.md  glama.json  manual-wiki-sync.sh  metadata.json  pyproject.toml  release.code-audit.md  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  test-labeler.md  test-sync-workflow.sh
.cursor/commands/: mv-main.md  pr.md  review-docs.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  question_support.yml  security_vulnerability.yml
.github/workflows/: build.yml  codeql.yml  labeler.yml  link-check-config.json  lint-code.yml  lint-docs.yml  lint.yml  release.yml  scorecard.yml  scorecards.yml  sync-wiki.yml
.well-known/: security.txt
assets/logo/: README.md  logo-ascii.txt  logo-minimal.txt  logo-simple.txt  logo-terminal.txt
compose/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  setup.sh
docs/: CONTRIBUTING.md  DOCKER_DESKTOP.md  LOCAL_DEVELOPMENT.md  POLICY_EXAMPLES.md  POLICY_REFERENCE.md  POLICY_SECURITY.md  SECURITY.md  policy-engine-flowchart.md
docs/legacy/: DOCKER_DESKTOP.md  LOCAL_DEVELOPMENT.md  POLICY_EXAMPLES.md  POLICY_REFERENCE.md  POLICY_SECURITY.md
docs/wiki/: 01-MCP-Overview.md  02-Risks.md  03-Design-Goals.md  04-Architecture.md  05-Security-Model.md  06-Configuration.md  06.1-servers.yml.md  06.2-credentials.yml.md  06.3-policy.yml.md  07-Tools-Reference.md  08-Usage-Cookbook.md  09-Deployment.md  10-Integrations.md  11-Observability-Audit.md  12-Troubleshooting.md  13-Contributing.md  14-FAQ.md  14-Roadmap.md  15-FAQ.md  15-Glossary.md  16-Glossary.md  Home.md  README.md  _Sidebar.md
examples/: example-credentials.yml  example-policy.yml  example-servers.yml
scripts/: docker-build.sh  docker-smoketest.sh  fix-markdownlint.py  fix-markdownlint.sh  setup-pre-commit.sh  test-annotations.sh  test-mcp-inspector-errors.sh  validate-config.py  validate-mcp-schema.py
servers/io.github.samerfarida/mcp-ssh-orchestrator/: server.json
src/mcp_ssh/: __init__.py  config.py  mcp_server.py  policy.py  ssh_client.py
src/mcp_ssh/tools/: __init__.py  utilities.py
temp-wiki-sync/: 01-MCP-Overview.md  04-Architecture.md  06.2-credentials.yml.md  06.3-policy.yml.md  09-Deployment.md  10-Integrations.md  12-Troubleshooting.md  16-Glossary.md  README.md
temp-wiki-sync/assets/diagrams/: architecture.mmd  security-model.mmd
tests/: __init__.py  test_async_task_manager.py  test_config.py  test_context_logging.py  test_error_sanitization.py  test_input_validation.py  test_mcp_compliance.py  test_mcp_notifications.py  test_policy.py  test_prompts.py  test_resources.py  test_server_tools.py  test_ssh.py  test_utilities.py
(+1 files in other folders)
